# datawhirr

./: Cargo.toml  LICENSE  Readme.md  start_pg.sh  test_control.sh
src/: config.rs  datawhirr.rs  main.rs  utils.rs
src/data_storages/: csv.rs  data_storages.rs  loader.rs  mod.rs  none.rs  pgsql.rs  sql.rs
src/data_storages/pgsql/: error.rs  mod.rs  parser.rs  pg.rs  utils.rs
